@@ -4,32 +4,27 @@ import de.nehlen.spookly.Spookly;
 import de.nehlen.spookly.SpooklyCorePlugin;
 import de.nehlen.spookly.player.PlayerRegisterEvent;
 import de.nehlen.spookly.player.SpooklyPlayer;
-import de.nehlen.spooklycloudnetutils.manager.GroupManager;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
-import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.scoreboard.ScoreboardManager;
 import org.bukkit.scoreboard.Team;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class NametagManager {
 
     public NametagManager() {
         Spookly.getServer().getEventExecuter().register(PlayerRegisterEvent.class, event -> {
-            SpooklyPlayer player = event.getSpooklyPlayer();
-            player.resetNameTag();
-            refreshNameTag(player);
+            refreshNameTag(event.getSpooklyPlayer());
         });
     }
 
     public void refreshNameTag(SpooklyPlayer player) {
-        refreshListname(player);
         resetScoreboard(player);
+        refreshListname(player);
         Spookly.getOnlinePlayers().forEach(spooklyPlayer -> {
             resetScoreboard(spooklyPlayer);
             registerPlayerToTeam(player, spooklyPlayer);
@@ -45,19 +40,18 @@ public class NametagManager {
         Player spigotPlayer = player.toPlayer();
         ScoreboardManager manager = spigotPlayer.getServer().getScoreboardManager();
         if (spigotPlayer.getScoreboard().equals(manager.getMainScoreboard())) {
-            spigotPlayer.setScoreboard(manager.getNewScoreboard());
+            Bukkit.getScheduler().runTask(SpooklyCorePlugin.getInstance(), () -> spigotPlayer.setScoreboard(manager.getNewScoreboard()));
         }
     }
 
-    private void registerPlayerToTeam(SpooklyPlayer player, SpooklyPlayer onlinePlayer) {
-        if (player == onlinePlayer) return;
+    private void registerPlayerToTeam(SpooklyPlayer scoreboardHolder, SpooklyPlayer onlinePlayer) {
         Component prefix = onlinePlayer.prefix();
-        List<Team> prefixTeam = player.toPlayer().getScoreboard().getTeams().stream().filter(t -> t.prefix().equals(prefix)).collect(Collectors.toList());
+        List<Team> prefixTeam = scoreboardHolder.toPlayer().getScoreboard().getTeams().stream().filter(t -> t.prefix().compact().contains(prefix)).toList();
 
         if (prefixTeam.isEmpty()) {
-            String generatedName = UUID.randomUUID() + "_" + getNameFromInput(GroupManager.getGroupSortId(onlinePlayer.toPlayer()));
-            Team team = player.toPlayer().getScoreboard().registerNewTeam(generatedName);
-            team.color(NamedTextColor.nearestTo(player.nameColor()));
+            String generatedName = getNameFromInput(onlinePlayer.tabSortId()) + "_" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
+            Team team = scoreboardHolder.toPlayer().getScoreboard().registerNewTeam(generatedName);
+            team.color(NamedTextColor.nearestTo(onlinePlayer.nameColor()));
             team.prefix(prefix);
             team.addEntries(onlinePlayer.toPlayer().getName());
         } else {
@@ -80,10 +74,15 @@ public class NametagManager {
         char letter = (char) ((input / 5) + 65);
         int repeat = input % 5 + 1;
         StringBuilder builder = new StringBuilder();
-        for (int i = 0; i < repeat; i++) {
-            builder.append(letter);
-        }
+
+        int i = 0;
+        do {
+            if(i < repeat)
+                builder.append(letter);
+            else
+                builder.append(0);
+            i++;
+        } while (builder.length() < 5);
         return builder.toString();
     }
-
 }
